syntax = "proto3";

package insidesvc.v1;

option go_package = "github.com/akhenakh/insideout/gen/go/insidesvc/v1;insidesvc";
import "google/protobuf/struct.proto";

service InsideService {
    //  Stab returns features containing lat lng
    rpc Within(WithinRequest) returns (WithinResponse) {}
    // Get returns a feature by its internal ID and polygon index
    rpc Get(GetRequest) returns (GetResponse) {}
}

message WithinRequest {
    double lat = 1;
    double lng = 2;

    // return features geometries or not
    // saving extra bytes
    bool remove_geometries = 3;

    // comma separated list of property so returns to save extra bytes, leave empty for all
    string select_properties = 4;
}

message WithinResponse {
    Point point = 1;
    repeated FeatureResponse responses = 2;
}

message GetRequest {
    uint32 id = 1;
    // internally stored as uint16
    uint32 loop_index = 2;
}

message GetResponse {
    uint32 id = 1;
    Feature feature = 2;
}

message FeatureResponse {
    // id in the index
    uint32 id = 1;

    Feature feature = 3;
}

message Feature {
    Geometry geometry = 1;

    map<string, google.protobuf.Value> properties = 2;
}

message Geometry {
    Type type = 1;

    repeated Geometry geometries = 2;

    repeated double coordinates = 3;

    enum Type {
        TYPE_UNSPECIFIED = 0;
        TYPE_POINT = 1;
        TYPE_POLYGON = 2;
        TYPE_MULTIPOLYGON = 3;
        TYPE_LINESTRING = 4;
    }
}

message Point {
    double lat = 1;
    double lng = 2;
}
